# DDDM-EVC

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  visualize.ipynb
analysis/: audio_perturbation.ipynb  avg_embed_extraction.ipynb  model_comparison.ipynb  phoneme_prediction.ipynb  style_tsne.ipynb  style_tsne.py
avgclass_emo_embeds/Development/: 1.npy  2.npy  3.npy  4.npy  5.npy  6.npy  7.npy
avgclass_emo_embeds/Test1/: 1.npy  2.npy  3.npy  4.npy  5.npy  6.npy  7.npy
avgclass_emo_embeds/Test2/: 1.npy  2.npy  3.npy  4.npy  5.npy  6.npy  7.npy
avgclass_emo_embeds/Train/: 1.npy  2.npy  3.npy  4.npy  5.npy  6.npy  7.npy
ckpt/: vqvae.pth
config/: config.yaml  config_evc.yaml  config_vc.yaml  dddm_evc_hu.yaml  dddm_evc_xlsr.yaml  dddm_evc_xlsr_ph.yaml  dddm_evc_xlsr_ph_yin.yaml  dddm_vc_xlsr.yaml  dddm_vc_xlsr_ph.yaml  dddm_vc_xlsr_ph_yin.yaml  schema.py
config/data/: base.yaml  vc.yaml
config/model/: evc.yaml  evc_hu.yaml  evc_xlsr.yaml  evc_xlsr_disentangled.yaml  evc_xlsr_ph.yaml  evc_xlsr_ph_yin.yaml  evc_xlsr_yin.yaml  evc_xlsr_yin_l2_norm.yaml  evc_xlsr_yin_label.yaml  tkn_autostylizer.yaml  tkn_evc_xlsr_yin.yaml  vc.yaml  vc_xlsr.yaml  vc_xlsr_ph.yaml  vc_xlsr_ph_yin.yaml  vc_xlsr_yin.yaml  vc_xlsr_yin_dc.yaml
config/training/: base.yaml  vc.yaml
data/: dataloader.py  vizualize.ipynb
data/datasets/: __init__.py  librispeech.py
data/datasets/librispeech/: vizualize.ipynb
pretrained/: hifigan.pth  metastylespeech.pth  vqvae.pth
pretrained/vc/: diffusion.pth  wavenet_decoder.pth
src/: config.py  feature_extraction.py  inference.py  profile.py  profile_model.py  style_tsne.py  train.py  train_style_encoder.py  vizualize.ipynb
src/data/: __init__.py  dataloader.py
src/data/datasets/: __init__.py  dataset.py  librispeech.py  msp_podcast.py
src/models/: __init__.py  content_encoder.py  dddm.py  dddm_evc.py  dddm_vc.py  diffusion.py  pitch_encoder.py  source_filter_encoder.py  speaker_encoder.py  speech_token_encoder.py  src_ftr_encoder.py  style_encoder.py  token_diffusion.py  vocoder.py  wavenet_decoder.py
src/models/dddm/: __init__.py  base.py  builder.py  dddm.py  duration_control.py  input.py  preprocessor.py
src/modules/: __init__.py  attention.py  commons.py
src/modules/attention/: __init__.py  attention.py  util.py
src/modules/diffusion/: __init__.py  base.py  modules.py  score_model.py
src/modules/hifigan/: __init__.py  modules.py
src/modules/style_speech/: __init__.py  modules.py
src/modules/style_transformer/: __init__.py  modules.py
src/modules/vqvae/: __init__.py  dist.py  jukebox.py  resnet.py  vq.py
src/modules/w2v2_l_robust/: __init__.py  (+1 more)
src/tests/: conftest.py  test_dataloader.py  test_dataset.py  test_dddm.py  test_diffusion.py  test_embeddings.py  test_preprocessing.py  test_source_filter_encoder.py  test_speaker_encoder.py  test_src_ftr_encoder.py
src/util/: __init__.py  audio.py  helpers.py  logging.py  math.py  plot.py  sequences.py  tkn_training.py  training.py  util.py
(+8 files in other folders)
