[project]
name = "DDDM-EVC"  # Replace with your project name
version = "0.1.0"
description = "Decoupled Denoising Diffusion Models for Emotional Voice Conversion"
authors = [
    { name = "Alexander Baur", email = "alexander.baur@studium.uni-hamburg.de" }
]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "2.5.1+cu124", source = "pytorch" }
torchaudio = { version = "2.5.1+cu124", source = "pytorch" }
hydra-core = "1.3.2"
soundfile = {platform = "win32", version = "^0.13.0"}
sox = {platform = "linux", version = "^1.5.0"}
numpy = "2.2.1"
AMFM-decompy = "1.0.11"
transformers = "4.48.2"
einops = "0.8.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "^2.15.0"
ruff = "^0.9.6"
mypy = "^1.14.1"
isort = "^5.13.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
jupyter = "^1.1.1"
matplotlib = "^3.10.0"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
ignore = ["E203"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
strict = true
